Atribui id e estilo a célula do héroi

--- a/roguelike.html
+++ b/roguelike.html
@@ -11,6 +11,9 @@
       width: 30px;
       background-color: brown;
     }
+    #heroi {
+      color: lightblue;
+    }
   </style>
 </head>
 <body>
@@ -32,7 +35,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td>@</td>
+            <td id="heroi">@</td>
             <td></td>
             <td></td>
             <td></td>
