--- a/roguelike.html
+++ b/roguelike.html
@@ -14,6 +14,9 @@
     #heroi {
       color: lightblue;
     }
+    .orc{
+      color: lightgreen;
+    }
   </style>
 </head>
 <body>
@@ -165,7 +168,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td>O</td>
+            <td class="orc">O</td>
             <td></td>
             <td></td>
             <td></td>
@@ -176,29 +179,7 @@
         <tr>
             <td></td>
             <td></td>
-            <td>O</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class="orc">O</td>
             <td></td>
             <td></td>
             <td></td>
@@ -361,7 +342,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td>O</td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -383,7 +364,29 @@
             <td></td>
             <td></td>
             <td></td>
-            <td>O</td>
+            <td class="orc">O</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="orc">O</td>
             <td></td>
             <td></td>
             <td></td>
@@ -411,7 +414,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td>O</td>
+            <td class="orc">O</td>
             <td></td>
             <td></td>
         </tr>
