Atribui classes e estilo aos tesouros

--- a/roguelike.html
+++ b/roguelike.html
@@ -17,6 +17,9 @@
     .orc{
       color: lightgreen;
     }
+    .tesouro{
+      color: gold;
+    }
   </style>
 </head>
 <body>
@@ -141,7 +144,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td>D</td>
+            <td class="tesouro">D</td>
             <td></td>
             <td></td>
             <td></td>
@@ -431,7 +434,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td>T</td>
+            <td class="tesouro">T</td>
             <td></td>
             <td></td>
             <td></td>
