--- a/roguelike.html
+++ b/roguelike.html
@@ -444,7 +444,7 @@
             <td class="parede"></td>
             <td class="parede"></td>
             <td class="parede"></td>
-            <td class="tesouro">T</td>
+            <td class="tesouro parede">T</td>
             <td></td>
             <td></td>
             <td></td>
