Cria constante celulas

--- a/roguelike.html
+++ b/roguelike.html
@@ -477,7 +477,7 @@
         </tr>
     </table>
     <script>
-        
+        const celulas = document.querySelectorAll('td');
     </script>
 </body>
 
