--- a/roguelike.html
+++ b/roguelike.html
@@ -478,6 +478,11 @@
     </table>
     <script>
         const celulas = document.querySelectorAll('td');
+
+        for(let c = 0; c < celulas.length - 1; c++) {
+            let celula = celulas[c];
+            celula.classList.add('parede');
+        }
     </script>
 </body>
 
